fix badge design + maybe fix text alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -269,6 +269,11 @@ input .hidearrows {
 	color: var(--primary-text-color);
 	display: inline-block;
 }
+.badge img {
+	width: 20px;
+	height: 20px;
+}
+
 .userData {
 	background-color: var(--secondary-color);
 	padding: 20px;
